# big_dog

go2_robot_sdk/: package.xml  setup.py
go2_robot_sdk/config/: demo_waypoints.yaml  mapper_params_online_async.yaml  nav2_params.yaml  navsat_params.yaml  single_robot_conf.rviz
go2_robot_sdk/go2_robot_sdk/: GPS_secondary.py  fix_origin_publisher.py  imu_converter_node.py  odom_covariance_node.py
go2_robot_sdk/go2_robot_sdk/infrastructure/ros2/: ros2_publisher.py
go2_robot_sdk/go2_robot_sdk/presentation/: go2_driver_node.py
go2_robot_sdk/launch/: master.launch.py  robot.launch.py
go2_robot_sdk/urdf/: go2.urdf
interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_descriptions/urdf/: vx300s.urdf.xacro
interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_moveit/config/: ompl_planning.yaml  servo_config.yaml
interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_moveit/config/srdf/: vx300s.srdf.xacro
interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_moveit/launch/: xsarm_moveit.launch.py
nav_search/: CMakeLists.txt  package.xml
nav_search/action/: DetectTarget.action  ScanArea.action
nav_search/scripts/: test.py  yolo_node.py
nav_search/src/: arm_search.cpp  arm_search_rev2.cpp  arm_search_rev4.cpp  arm_search_rev5.cpp  arm_searchrev3.cpp  description  original_arm.cpp  track_target.cpp
nav_search/srv/: TrackTarget.srv
